--- a/virtual-keyboard/package.json
+++ b/virtual-keyboard/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^13.2.2",
     "terser-webpack-plugin": "^5.3.7",
     "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.3"
   }
 }
