--- a/virtual-keyboard/.eslintrc.json
+++ b/virtual-keyboard/.eslintrc.json
@@ -2,5 +2,8 @@
   "extends": ["airbnb-base", "plugin:import/errors", "plugin:import/warnings"],
   "rules": {
     "linebreak-style": ["error", "windows"]
+  },
+  "env": {
+    "browser": true
   }
 }
